deps/jansson/test/suites/invalid/lone-open-brace/error.normal
2 0 2
string or '}' expected near end of file
